force-app/main/default/objects/KimbleOne__ConfigurationIndex__c/KimbleOne__ConfigurationIndex__c.object-meta.xml
<CustomObject>
    <label>Configuration Index</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Indices</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>