force-app/main/default/objects/KimbleOne__ConfigurationIndex__c/fields/KimbleOne__ConfigurationIndexType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ConfigurationIndexType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ConfigurationIndexType</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Configuration Indices</relationshipLabel>
    <relationshipName>ConfigurationIndices</relationshipName>
    <type>Lookup</type>
</CustomField>