force-app/main/default/objects/KimbleOne__ConfigurationIndex__c/fields/KimbleOne__IsRestricted__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsRestricted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Restricted</label>
    <type>Checkbox</type>
</CustomField>