force-app/main/default/objects/KimbleOne__ConfigurationIndex__c/fields/KimbleOne__Target__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Target__c</fullName>
    <label>Target</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>