force-app/main/default/objects/KimbleOne__ConfigurationIndex__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__ConfigurationIndexType__c</columns>
    <columns>KimbleOne__Description__c</columns>
    <columns>KimbleOne__Keywords__c</columns>
    <columns>KimbleOne__Target__c</columns>
    <columns>KimbleOne__IsRestricted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>